updated pom.xml, restructured directories, addition of assembly.xml